# web_semantique

./: .gitignore  GUIDE_UTILISATION.md  README.md  SETUP_FUSEKI.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  replit.md  setup.sh
app/: layout.tsx
attached_assets/: Pasted-Prompt-texte-donner-Bolt-IA-FR-copie-colle-direct-Bonjour-Bolt-Je-veux-que-tu-g-n-res-1761650974745_1761650974745.txt
backend/: .env.example  README.md  ai_translator_simple.py  app.py  fuseki_client.py  init_data.py  init_db.py  main.py  ontology.py  requirements.txt  seed_database.py  setup_dataset.sh  sparql_queries.py
backend/ontology/: nutrition.owl
components/: ActiviteManager.tsx  AlimentManager.tsx  ConditionManager.tsx  PersonneManager.tsx  RecommandationManager.tsx  RepasManager.tsx  SearchPanel.tsx
data/: the_team.rdf
final/backend/: app.py  config.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.js  App.jsx  index.css
src/: App.tsx
src/components/: DataManager.tsx  ProfileManager.tsx  Recommendations.tsx  SPARQLQuery.tsx  SemanticSearch.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts  supabase.ts
src/pages/: AdminPage.tsx  HomePage.tsx  SearchPage.tsx
supabase/migrations/: 20251025130753_create_nutrition_wellness_schema.sql  20251028102155_create_nutrition_ontology_schema.sql  20251028102315_populate_ontology_data.sql
web_semantique/: Dockerfile  docker-compose.yml  package-lock.json  package.json
web_semantique/app/: globals.css  layout.tsx  page.tsx
(+63 files in other folders)
