[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi>=0.120.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "rdflib>=7.3.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
